# mailing_service

./: .env.sample  .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py
mailings/: forms.py  models.py  urls.py  views.py
mailings/management/commands/: send_mailings.py
mailings/migrations/: 0001_initial.py  0002_message_owner.py  0003_alter_client_options_alter_mailing_options_and_more.py  0004_alter_client_options.py
mailings/services/: home_services.py  mailing_services.py  toggle_services.py
mailings/templates/: base.html  home.html
mailings/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
mailings/templates/mailings/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailings/templates/messages/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: init_groups.py
users/migrations/: 0001_initial.py  0002_emailactivation.py  0003_alter_customuser_options.py  0004_alter_customuser_options.py
users/templates/users/: activation_invalid.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_rest.html  please_confirm.html  register.html  user_detail.html  user_update.html
